package amber.stargazer_proto;
option java_package = "stargazer.proto";
option java_outer_classname = "StargazerProto";

import "drivermsg.proto";

extend amber.DriverMsg {
	optional LocalizationData localizationData = 10;
	optional DataRequest dataRequest = 11;
	optional SubscribeAction subscribeAction = 12;
}

message LocalizationData {
	required float xPos = 1;
	required float yPos = 2;
	required float zPos = 3;
	required float angle = 4;
	required uint32 markerID = 5;
  optional uint32 timestamp = 6;
}

message DataRequest {

}

message SubscribeAction {

	enum ACTION {
		SUBSCRIBE = 1;
		UNSUBSCRIBE = 2;
	}
	
	required ACTION action = 1 [default = SUBSCRIBE];	
     // required uint32 listener_id = 2;
     optional uint32 freq = 2;
}	
